--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">Váš Průvodce Matematikou a Fyzikou na Vysoké Škole</p>
+                <p class="masthead-subheading font-weight-light mb-0">Komplexní Rychlokurzy Matematiky a Fyziky pro Vysoké Školy</p>
             </div>
         </header>
         <!-- Portfolio Section-->
@@ -161,7 +161,7 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ms-auto"><p class="lead">Nabízíme komplexní rychlokurzy matematiky (lineární algebra a matematická analýza) a fyziky pro vybrané předměty odpovídající 1. ročníkům univerzit VŠE, VŠCHT, ČVÚT, MFF UK.</p></div>
+                    <div class="col-lg-4 ms-auto"><p class="lead">Nabízíme komplexní <strong>rychlokurzy</strong> matematiky (lineární algebra a matematická analýza) a fyziky pro vybrané předměty odpovídající 1. ročníkům univerzit VŠE, VŠCHT, ČVÚT, MFF UK.</p></div>
                     <div class="col-lg-4 me-auto"><p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p></div>
                 </div>
                 <!-- About Section Button-->
@@ -212,7 +212,7 @@
                         <h4 class="text-uppercase mb-4">Kontakty</h4>
 			
                         <p class="lead mb-0" style="">
-                            <strong>E-mail</strong>: ?nalivarna?@gmail.com
+                            <strong>E-mail</strong>: kontakt.nalivarna@gmail.com
                             
                         </p>
 			<!--<p class="lead mb-0" style="">
@@ -231,10 +231,11 @@
                     </div>
                     <!-- Footer About Text-->
                     <div class="col-lg-4">
-                        <h4 class="text-uppercase mb-4">About Nalívárna</h4>
-                        <p class="lead mb-0">
+                        <h4 class="text-uppercase mb-4">Nalívárna</h4>
+                        <!--<p class="lead mb-0">
                             Váš Průvodce Matematikou a Fyzikou na Vysoké Škole
-                        </p>
+                        </p>-->
+                        <p class="lead mb-0">Komplexní Rychlokurzy Matematiky a Fyziky pro Vysoké Školy</p>
 			<p>
 			   <a data-bs-toggle="modal" href="#portfolioModal7">Zásady ochrany osobních údajů</a>
 			</p>
@@ -576,7 +577,7 @@
     <div class="right"><h5 style="text-align:justify;">vybraná vysoká škola.</h5></div> 
   <div>
   <br>
-  <h5 class="left" style="text-align:justify;"><strong>Správcem vašich údajů je Team Nalívárna (Nalívárna©), email: ?nalivarna?@gmail.com.</strong></h5>
+  <h5 class="left" style="text-align:justify;"><strong>Správcem vašich údajů je Team Nalívárna (Nalívárna©), email: kontakt.nalivarna@gmail.com.</strong></h5>
   <br>
   <div>
   <h5 class="left" style="text-align:justify;"><strong>Všechny tyto osobní údaje jsou zpracovávány na základě vyplnění tohoto kontaktního formuláře na
