--- a/public/index.html
+++ b/public/index.html
@@ -563,21 +563,21 @@
   <h5 class="left" style="text-align:justify;"><strong>Zpracováváme o Vás tyto osobní údaje:</strong></h5>
   </div>
   <br>
-    <div class="left"><h5 style="text-align:justify;"></h5></div>
+    <div class="left"><h5 style="text-align:justify;"><i class="fa-solid fa-circle fa-xs"></i></h5></div>
     <div class="right"><h5 style="text-align:justify;">jméno;</h5></div>
-    <div class="left"><h5 style="text-align:justify;"></h5></div>
+    <div class="left"><h5 style="text-align:justify;"><i class="fa-solid fa-circle fa-xs"></i></h5></div>
     <div class="right"><h5 style="text-align:justify;">příjmení;</h5></div> 
-    <div class="left"><h5 style="text-align:justify;"></h5></div>
+    <div class="left"><h5 style="text-align:justify;"><i class="fa-solid fa-circle fa-xs"></i></h5></div>
     <div class="right"><h5 style="text-align:justify;">emailová adresa;</h5></div> 
-    <div class="left"><h5 style="text-align:justify;"></h5></div>
+    <div class="left"><h5 style="text-align:justify;"><i class="fa-solid fa-circle fa-xs"></i></h5></div>
     <div class="right"><h5 style="text-align:justify;">telefonní kontakt;</h5></div> 
-    <div class="left"><h5 style="text-align:justify;"></h5></div>
+    <div class="left"><h5 style="text-align:justify;"><i class="fa-solid fa-circle fa-xs"></i></h5></div>
     <div class="right"><h5 style="text-align:justify;">speciální požadavky;</h5></div> 
-    <div class="left"><h5 style="text-align:justify;"></h5></div>
+    <div class="left"><h5 style="text-align:justify;"><i class="fa-solid fa-circle fa-xs"></i></h5></div>
     <div class="right"><h5 style="text-align:justify;">vybraná vysoká škola.</h5></div> 
   <div>
   <br>
-  <h5 class="left" style="text-align:justify;"><strong>Správcem vašich údajů je Team Nalívárna (Nalívárna©), email: kontakt.nalivarna@gmail.com.</strong></h5>
+  <h5 class="left" style="text-align:justify;"><strong>Správcem vašich údajů je Team Nalívárna (Copyright &copy; Nalívárna 2023), email: kontakt.nalivarna@gmail.com.</strong></h5>
   <br>
   <div>
   <h5 class="left" style="text-align:justify;"><strong>Všechny tyto osobní údaje jsou zpracovávány na základě vyplnění tohoto kontaktního formuláře na
