--- a/public/index.html
+++ b/public/index.html
@@ -224,7 +224,7 @@
                     <!-- Footer Social Icons-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Sledujte nás</h4>
-                        <a class="btn btn-outline-light btn-social mx-1" href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"><i class="fab fa-fw fa-facebook-f"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://www.facebook.com/profile.php?id=100090821780818" target="_blank" rel="noopener noreferrer"><i class="fab fa-fw fa-facebook-f"></i></a>
                         <!--<a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-linkedin-in"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-dribbble"></i></a>-->
@@ -577,7 +577,7 @@
     <div class="right"><h5 style="text-align:justify;">vybraná vysoká škola.</h5></div> 
   <div>
   <br>
-  <h5 class="left" style="text-align:justify;"><strong>Správcem vašich údajů je Team Nalívárna (Copyright &copy; Nalívárna 2023), email: kontakt.nalivarna@gmail.com.</strong></h5>
+  <h5 class="left" style="text-align:justify;"><strong>Správcem Vašich údajů je Team Nalívárna (Copyright &copy; Nalívárna 2023), email: kontakt.nalivarna@gmail.com.</strong></h5>
   <br>
   <div>
   <h5 class="left" style="text-align:justify;"><strong>Všechny tyto osobní údaje jsou zpracovávány na základě vyplnění tohoto kontaktního formuláře na
@@ -586,8 +586,8 @@
  mít pouze Team Nalívárna a třetí osoby, které budou na základě pověření správce konat v našem jménu při poskytovaní služeb anebo při výkone jiné činnosti
  související s poskytováním služeb. Všichni jsou vázáni mlčenlivostí.</strong></h5>
   <br>
-  <h5 class="left" style="text-align:justify;"><strong>Máte právo na opravu, změnu či výmaz vašich osobních údajů. Můžete si vyžádat dodatečné informace
- o vašich osobních údajích a to na emailu správce osobních údajů. V případě podezření na zneužívání údajů či protiprávního jednání, máte zcela vyhrazené
+  <h5 class="left" style="text-align:justify;"><strong>Máte právo na opravu, změnu či výmaz Vašich osobních údajů. Můžete si vyžádat dodatečné informace
+ o Vašich osobních údajích a to na emailu správce osobních údajů. V případě podezření na zneužívání údajů či protiprávního jednání, máte zcela vyhrazené
  právo na nahlášení událostí na příslušný dozorový úřad.</strong></h5>
 
   </div>
